# CppProjectTemplate

./: CMakeLists.txt  README.md  conanfile.txt  config.ini  setup.sh
app/: CMakeLists.txt  main.cpp
include/: app.h  cache.h  config.h  logger.h
infra/: CMakeLists.txt  config.cpp  logger.cpp
src/: CMakeLists.txt  app.cpp  config.cpp  logger.cpp
tests/: CMakeLists.txt  cacheTest.cpp  sample.ini  sampleTest.cpp
